# goalgorithm-mcp

./: .gitignore  README.md  pyproject.toml
src/goalgorithm_mcp/: __init__.py  data_fetcher.py  prediction_engine.py  server.py  types.py
tests/: test_data_fetcher.py  test_prediction_engine.py
