[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goalgorithm-mcp"
version = "0.1.0"
description = "Soccer match predictions using xG + Poisson model, exposed as MCP tools"
readme = "README.md"
license = "GPL-2.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0,<4",
    "httpx>=0.27",
]

[project.scripts]
goalgorithm-mcp = "goalgorithm_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/goalgorithm_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
